<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.dashboard.DashboardActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="20dp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_main_banner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_main_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="-100dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_scan_code"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginHorizontal="50dp"
            android:background="@drawable/button_bg"
            android:fontFamily="@font/lato_bold"
            android:text="@string/scan_code"
            android:textSize="20sp"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/btn_type_code"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_type_code"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginHorizontal="50dp"
            android:layout_marginVertical="20dp"
            android:background="@drawable/button_bg"
            android:fontFamily="@font/lato_bold"
            android:text="@string/type_code"
            android:textSize="20sp"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/btn_search_product"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btn_scan_code"
            app:layout_constraintTop_toBottomOf="@+id/btn_scan_code" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_search_product"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginHorizontal="50dp"
            android:background="@drawable/button_bg"
            android:fontFamily="@font/lato_bold"
            android:text="@string/search_product"
            android:textSize="20sp"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_type_code" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_code_search_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:background="@drawable/dialog_bg"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:fontFamily="@font/lato_bold"
            android:text="@string/search_with_code"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/et_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="10dp"
            android:background="@drawable/edt_bg"
            android:fontFamily="@font/lato_regular"
            android:hint="@string/enter_code"
            android:paddingHorizontal="10dp"
            android:paddingVertical="10dp"
            android:textColor="@color/black"
            android:textColorHint="@color/hint_color"
            app:layout_constraintBottom_toTopOf="@+id/btn_search"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_title" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_search"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="10dp"
            android:background="@drawable/button_dark_bg"
            android:fontFamily="@font/lato_bold"
            android:text="Search"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/img_close"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_margin="5dp"
            android:padding="5dp"
            android:src="@drawable/ic_close"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_admin_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:visibility="gone"
        android:layout_marginTop="-100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_create_account"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginHorizontal="50dp"
            android:background="@drawable/button_bg"
            android:fontFamily="@font/lato_bold"
            android:text="@string/create_staff_account"
            android:textSize="20sp"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/btn_upload_data"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
            tools:layout_editor_absoluteX="50dp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_upload_data"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginHorizontal="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_bg"
            android:fontFamily="@font/lato_bold"
            android:text="@string/upload_data"
            android:textSize="20sp"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_create_account"
            tools:layout_editor_absoluteX="50dp" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>