<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.signup.CreateStaffAccActivity">

    <EditText
        android:id="@+id/edt_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:background="@drawable/edt_bg"
        android:fontFamily="@font/lato_bold"
        android:hint="@string/enter_staff_name"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:layout_marginTop="20dp"
        android:singleLine="true"
        android:textColor="@color/black"
        android:textColorHint="@color/hint_color"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="20dp" />

    <EditText
        android:id="@+id/edt_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/edt_bg"
        android:fontFamily="@font/lato_bold"
        android:hint="@string/enter_email"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@+id/edt_name"
        android:singleLine="true"
        android:textColor="@color/black"
        android:textColorHint="@color/hint_color"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/edt_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/edt_bg"
        app:layout_constraintTop_toBottomOf="@+id/edt_email"
        android:fontFamily="@font/lato_bold"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:singleLine="true"
        android:textColor="@color/black"
        android:textColorHint="@color/hint_color"
        android:textSize="20sp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_create_acc"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="100dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_bg"
        android:fontFamily="@font/lato_bold"
        android:text="Create"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_password" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="15dp"
        android:background="@color/app_dark_color_2"
        app:layout_constraintTop_toBottomOf="@+id/btn_create_acc"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_staff_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        tools:listitem="@layout/item_staff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view" />

</androidx.constraintlayout.widget.ConstraintLayout>