<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="15dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/gradiant_bg"
            android:padding="15dp">

            <TextView
                android:id="@+id/tv_name_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lato_bold"
                android:paddingVertical="8dp"
                android:text="@string/product_name"
                android:textColor="@color/white"
                android:textSize="22sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/lato_regular"
                android:paddingVertical="8dp"
                android:text="@string/product_name"
                android:textColor="@color/white"
                android:textSize="22sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tv_name_title"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_qty_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lato_bold"
                android:paddingVertical="8dp"
                android:text="@string/quantity"
                android:textColor="@color/white"
                android:textSize="22sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_name" />

            <TextView
                android:id="@+id/tv_qty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/lato_regular"
                android:paddingVertical="8dp"
                android:text="@string/product_name"
                android:textColor="@color/white"
                android:textSize="22sp"
                app:layout_constraintStart_toEndOf="@+id/tv_qty_title"
                app:layout_constraintTop_toTopOf="@+id/tv_qty_title" />

            <TextView
                android:id="@+id/tv_MRP_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lato_bold"
                android:paddingVertical="8dp"
                android:text="@string/mrp"
                android:textColor="@color/white"
                android:textSize="22sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_qty" />

            <TextView
                android:id="@+id/tv_MRP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/lato_regular"
                android:paddingVertical="8dp"
                android:text="@string/product_name"
                android:textColor="@color/white"
                android:textSize="22sp"
                app:layout_constraintStart_toEndOf="@+id/tv_MRP_title"
                app:layout_constraintTop_toTopOf="@+id/tv_MRP_title" />

            <TextView
                android:id="@+id/tv_EG_Price_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lato_bold"
                android:paddingVertical="8dp"
                android:text="@string/eg_price"
                android:textColor="@color/white"
                android:textSize="22sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_MRP" />

            <TextView
                android:id="@+id/tv_EG_Price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/lato_regular"
                android:paddingVertical="8dp"
                android:text="@string/eg_price"
                android:textColor="@color/white"
                android:textSize="22sp"
                app:layout_constraintStart_toEndOf="@+id/tv_EG_Price_title"
                app:layout_constraintTop_toTopOf="@+id/tv_EG_Price_title" />

            <TextView
                android:id="@+id/tv_Discount_Price_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lato_bold"
                android:paddingVertical="8dp"
                android:text="@string/discount"
                android:textColor="@color/white"
                android:textSize="22sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_EG_Price" />

            <TextView
                android:id="@+id/tv_discount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/lato_bold"
                android:paddingVertical="8dp"
                android:text="@string/discount"
                android:textColor="@color/white"
                android:textSize="22sp"
                app:layout_constraintStart_toEndOf="@+id/tv_Discount_Price_title"
                app:layout_constraintTop_toTopOf="@+id/tv_Discount_Price_title" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>